# Fastapi-Ecosystem-Lab

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
FastAPI/src/: constants.py  database.json  database.py  main.py
FastAPI/src/first_steps/: my_app.py  router.py
learn_fastapi/: .env.example  README.md  docker-compose.yaml
learn_fastapi/docs/: awesome-fastapi.md  fastapi-best-practices.md  fastapi-new.md
learn_fastapi/src/: config.py  constants.py  database.json  database.py  main.py  middleware.py
learn_fastapi/src/auth/: annotations.py  exceptions.py  models.py  router.py  schema.py  utils.py
learn_fastapi/src/first_steps/: annotations.py  models.py  my_app.py  router.py  schema.py  validators.py
learn_fastapi/src/items/: annotations.py  models.py  router.py  validators.py
learn_fastapi/src/static/js/: reloadScript.js
learn_fastapi/src/utils/: annotations.py
learn_fastapi/tests/: conftest.py  test_main.py
learn_fastapi/tests/auth/: conftest.py  test_auth.py
learn_fastapi/tests/first_steps/: conftest.py  test_router.py
learn_fastapi/tests/items/: conftest.py  test_router.py
